...
                  palette={["#003D7C", "#C49102", "#FF5733", "#EF9556", "#900C3F", "#581845", "#4DAB9A", "#364954", "#454B4E", "#937264"]}
                />
                </>)
                : "" }
                <View style={!darkMode ? styles.buttonGroup : stylesDark.buttonGroup}>
                <Button title="Cancel" onPress={() => {setModal(false)}} />
                <Button title="OK" onPress={() => {
                  setModal(false); 
                  newPassword ? newPasswordHandler(newPassword) : "";
                  newUsername ? newUsernameHandler(newUsername) : "";
                  feedback ? feedbackHandler(feedback) : "";}} />
              </View>
            </View>
...
