...
    onAuthStateChanged(auth, (user) => {
      // console.log("USER IS STILL LOGGED IN: " , user);
      if (user) {
        setUser(user);
        navigation.navigate("Profile");
      } else {
        // navigation.navigate("Login");
      }
    });
  }, [user]);

  const signIn = () => {
    signInWithEmailAndPassword(auth, email, password)
...
      })
      .catch((err) => {
        if (err.code == "auth/invalid-email") {
          alert("Invalid Email");
        }
        else {
          alert("Invalid Password");
        }
      });
  };

  // AsyncStorage.clear();

...
