...
    const confirmImportNew = () => {
        Alert.alert(
            'Import new timetable',
            'Are you sure you want to remove the current timetable?\n Importing a new timetable will remove all your reminders!',
            [
                { text: 'Cancel', style: 'cancel' },
                { text: 'Remove', style: 'destructive', onPress: optionHandler }
            ]
        );
    };

    const saveData = async () => {
        try {
...
            navigation.setOptions({
                headerLeft: () => (
                  <TouchableOpacity
                    onPress={confirmImportNew}
                    style={darkMode ? stylesDark.headerLeftButton : styles.headerLeftButton}
                  >
                    <Text style={styles.headerLeftButtonText}>Import New</Text>
                  </TouchableOpacity>
                ),
              });
        } else {
            navigation.setOptions({
                headerLeft: null,
...
                                    <Button title="Reminders" onPress={() => {
                                        navigation.navigate('Reminder', {
                                            moduleCode: currentEvt.title,
                                            screenTitle: currentEvt.title
                                        }); setModal(false)
                                    }} />
                                    <Button title="Get Route" onPress={() => { navigation.navigate('Profile', {screen: 'Map', params: {destVenue: currentEvt.location}}); setModal(false) }} />
                                </View>
                            </View>
                        </TouchableWithoutFeedback>
                    </View>
                </TouchableWithoutFeedback>
            </Modal>
...
            />
            <Text style={darkMode ? stylesDark.text : styles.text}>
                Paste your NUSMods timetable link!
            </Text>
            <TextInput
                style={darkMode ? stylesDark.input : styles.input}
                placeholder="https://nusmods.com/timetable/sem-....."
                placeholderTextColor="#9E9E9E"
                onChangeText={handleChange}
                value={formUrl}
            />
            {error ? <Text style={styles.errorText}>{error}</Text> : null}
            <View style={styles.importButton}>
...
