...

    return () => subscriber();
  };

  navigation.setOptions({
    headerRight: () => (
      <Button onPress={() => {navigation.navigate("NewReminder", { moduleCode: moduleCode })}} title="Add" />
    ),
  });

  navigation.setOptions({
    headerRight: () => (
      <TouchableOpacity
...
