...
                  if (typeof next === 'function') {
                    next();
                  }
                  goHandler();
                }}
              >
                GO
              </ThemedButton>
          </View>
          <View style={styles.overlayContainerDest}>
              <SelectDropdown
              data={data}
              search={true}
...
