appId: com.xqtann.nextClass
---
- openLink: exp://192.168.1.120:8081
- assertVisible:
      text: Home
- tapOn: "Timetable, tab, 2 of 5"
- assertVisible:
      text: Timetable
- tapOn: 
      text: "Import New"
      optional: true
- tapOn: 
      text: "Remove"
      optional: true
- tapOn: 
      text: "https://nusmods.com/timetable/sem-....."
      optional: true
- inputText: "https://nusmods.com/timetable/sem-1/share?CS2100=TUT:22,LEC:2,LAB:41&CS2101=&CS2103T=LEC:G09&CS2105=TUT:14,LEC:2&GEN2001=LEC:1,TUT:E2&ST2334=TUT:18,LEC:1"
- tapOn:
    id: "aws-btn-shadow"
- tapOn: 
      point: 34%,46%
- tapOn: 
      point: 74%,62%
- assertVisible:
      text: Map
- tapOn:
    point: "38%,14%"
- tapOn: "AS1-0203"
- tapOn: "GO"
- extendedWaitUntil:
    visible: 
        id: "__CAROUSEL_ITEM_0_READY__"
- assertVisible:
    id: "__CAROUSEL_ITEM_0_READY__"
- tapOn: "Timetable, tab, 2 of 5"
- assertVisible:
      text: Timetable
- tapOn: 
      point: 34%,46%
- tapOn: 
      point: 27%,62%
- assertVisible:
      text: Add